src/snapshots/hugr_qir__lower_ssa_vars_v2__test__lowered_v2@float_phi_with_constant_successor_incoming.snap
---
source: src/lower_ssa_vars_v2.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:float_phi_with_constant_successor_incoming>'
source_filename = "float_phi_with_constant_successor_incoming"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  br i1 %cond0, label %merge.leaf.p0.0, label %merge.leaf.p1.0

merge.leaf.p0.0:                                  ; preds = %entry
  br i1 %cond1, label %succ.leaf.p1.0, label %succ.leaf.p0.0

merge.leaf.p1.0:                                  ; preds = %entry
  br i1 %cond1, label %succ.leaf.p2.0, label %succ.leaf.p0.0

common.ret:                                       ; preds = %succ.leaf.p2.0, %succ.leaf.p1.0, %succ.leaf.p0.0
  ret void

succ.leaf.p0.0:                                   ; preds = %merge.leaf.p0.0, %merge.leaf.p1.0
  call void @consume(double 4.000000e+00)
  br label %common.ret

succ.leaf.p1.0:                                   ; preds = %merge.leaf.p0.0
  call void @consume(double 3.000000e+00)
  br label %common.ret

succ.leaf.p2.0:                                   ; preds = %merge.leaf.p1.0
  call void @consume(double 3.000000e+00)
  br label %common.ret
}

declare void @consume(double)
