src/snapshots/hugr_qir__lower_ssa_vars_v2__test__lowered_v2@qubit_phi_with_constant_successor_incoming.snap
---
source: src/lower_ssa_vars_v2.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:qubit_phi_with_constant_successor_incoming>'
source_filename = "qubit_phi_with_constant_successor_incoming"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  %. = select i1 %cond0, ptr inttoptr (i64 1 to ptr), ptr inttoptr (i64 2 to ptr)
  br i1 %cond1, label %succ.leaf.p0.0, label %succ.leaf.p1.0

common.ret:                                       ; preds = %succ.leaf.p1.0, %succ.leaf.p0.0
  ret void

succ.leaf.p0.0:                                   ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 3 to ptr))
  br label %common.ret

succ.leaf.p1.0:                                   ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 4 to ptr))
  br label %common.ret
}

declare void @__quantum__qis__reset__body(ptr)
