src/snapshots/hugr_qir__lower_ssa_vars_v2__test__lowered_v2@select_with_record_output.snap
---
source: src/lower_ssa_vars_v2.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:select_with_record_output>'
source_filename = "select_with_record_output"
target datalayout = "<normalized>"
target triple = "<normalized>"

@0 = private unnamed_addr constant [5 x i8] c"flag\00", align 1

define void @__hugr__.main.1() {
entry:
  %flag = tail call i1 @__quantum__qis__read_result__body(ptr null)
  br i1 %flag, label %entry.leaf.1, label %entry.leaf.0

__prepare_module_record_output_final:             ; preds = %entry.leaf.1, %entry.leaf.0
  call void @__quantum__rt__bool_record_output(i1 %flag, ptr @0)
  ret void

entry.leaf.0:                                     ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  br label %__prepare_module_record_output_final

entry.leaf.1:                                     ; preds = %entry
  call void @__quantum__qis__reset__body(ptr null)
  br label %__prepare_module_record_output_final
}

declare i1 @__quantum__qis__read_result__body(ptr)

declare void @__quantum__rt__bool_record_output(i1, ptr)

declare void @__quantum__qis__reset__body(ptr)
