src/snapshots/hugr_qir__lower_ssa_vars_v2__test__lowered_v2@simple_qubit_phi.snap
---
source: src/lower_ssa_vars_v2.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:simple_qubit_phi>'
source_filename = "simple_qubit_phi"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond) {
entry:
  br i1 %cond, label %merge.leaf.p0.0, label %merge.leaf.p1.0

common.ret:                                       ; preds = %merge.leaf.p1.0, %merge.leaf.p0.0
  ret void

merge.leaf.p0.0:                                  ; preds = %entry
  call void @__quantum__qis__reset__body(ptr null)
  br label %common.ret

merge.leaf.p1.0:                                  ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  br label %common.ret
}

declare void @__quantum__qis__reset__body(ptr)
